Make sure entries don't overlap.

--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -10,8 +10,10 @@ body, a {
   color: #999;
 }
 a {
+  display: inline-block;
   background-color: #000;
   padding: 2px;
+  margin: 1px;
   text-decoration: none;
 }
 a:hover, a:active {
